testsuite/poke.pkl/scons-label-diag-1.pk
/* { dg-do compile } */

type T = pinned struct
  {
    uint32 x;
    uint16 y @ 2#B; /* { dg-error "pinned" } */
  };
